src/objects/BundleItem__c.object
<CustomObject>
    <fields>
        <fullName>Bundle__c</fullName>
        <description>Maser of the Bundle item record.</description>
        <label>Bundle</label>
        <referenceTo>Bundle__c</referenceTo>
        <relationshipLabel>Bundle Items</relationshipLabel>
        <relationshipName>BundleItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ServiceItemFamily__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Item Family</label>
        <referenceTo>ServiceItemFamily__c</referenceTo>
        <relationshipLabel>Bundle Items</relationshipLabel>
        <relationshipName>BundleItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceItemType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Item Type</label>
        <referenceTo>ServiceItemType__c</referenceTo>
        <relationshipLabel>Bundle Items</relationshipLabel>
        <relationshipName>BundleItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bundle Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bundle Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bundle Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>